src/test/ui/issues/issue-30535.stderr
error[E0573]: expected type, found variant `foo::Foo::FooV`
  --> $DIR/issue-30535.rs:16:8
   |
LL |     _: foo::Foo::FooV //~ ERROR expected type, found variant `foo::Foo::FooV`
   |        ^^^^^^^^^^^^^^ not a type
   |
   = help: there is an enum variant `foo::Foo::FooV`, try using `foo::Foo`?

error: aborting due to previous error

For more information about this error, try `rustc --explain E0573`.
